<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:theme="@style/Theme.Material3.DayNight.BottomSheetDialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/m_bottom_sheet_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/m_headerText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m_bottom_sheet_handle"
        app:layout_constraintHorizontal_bias="0.5"
        tools:text="@string/m_requester_name_unavailable_request_header"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge.Emphasized"/>

    <ImageView
        android:id="@+id/m_requester_app_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/m_headerText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintDimensionRatio="4:12"/>

    <TextView
        android:id="@+id/m_descriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m_requester_app_icon"
        app:layout_constraintHorizontal_bias="0.5"
        tools:text="@string/m_trusted_requester_name_unavailable_requesting_description"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />


    <TextView
        android:id="@+id/m_subHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/m_permission"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/m_descriptionText"
        app:layout_constraintBottom_toTopOf="@id/m_permissionList"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall.Emphasized"
        android:layout_margin="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/m_permissionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="12dp"
        android:nestedScrollingEnabled="false"
        app:behavior_peekHeight="auto"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m_subHeader"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/m_permissionAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="m_subHeader,m_permissionList"/>

    <Button
        style="@style/Widget.Material3.Button.TonalButton"
        android:id="@+id/m_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/m_approveButton"
        app:layout_constraintTop_toBottomOf="@id/m_permissionList"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/m_cancel_text"/>


    <Button
        style="@style/Widget.Material3.Button"
        android:id="@+id/m_approveButton"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@id/m_cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m_permissionList"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/m_approve_trusted_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>